# oxido_task

./: README.md  TODO.md  pyproject.toml  run_generator.py
html_article_generator/: article_generator.py  setup.py
html_article_generator/data/: prompt.txt
html_article_generator/templates/: output.html  template.html
