[tool.poetry]
name = "oxido-task"
version = "0.1.0"
description = ""
authors = ["ElaKaptsilava <lizavetakaptsilava@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.54.4"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
